# Q3VIBE-Engine

./: .gitignore  AGENTS.md  README.md  meson.build  meson.options
.github/workflows/: build.yml
baseq3a/: meson.build
build-support/meson/sources/: meson.build
code/qcommon/: q_shared.h
scripts/: generate_meson_source_lists.py  stringify_glsl.py
src/engine/botlib/: be_ai_goal.cpp  be_ai_weap.cpp  l_memory.cpp  l_memory.h  l_precomp.cpp  l_struct.h
src/engine/client/: cl_cgame.cpp  cl_curl.cpp  cl_jpeg.c  cl_main.cpp  cl_ui.cpp  snd_codec.cpp  snd_codec_ogg.cpp  snd_codec_wav.cpp  snd_dma.cpp  snd_mem.cpp  snd_mix.cpp
src/engine/qcommon/: cm_load.cpp  cm_test.cpp  common.c  common.cpp  files.cpp  msg.cpp  net_chan.cpp  net_ip.cpp  q_shared.cpp  q_shared.h  qcommon.h  unzip.cpp  vm.cpp  vm_interpreted.cpp  vm_powerpc.cpp  vm_x86.cpp
src/engine/renderer/: tr_animation.cpp  tr_arb.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cmds.cpp  tr_common.h  tr_curve.cpp  tr_flares.cpp  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_mesh.cpp  tr_model.cpp  tr_model_iqm.cpp  tr_scene.cpp  tr_shade.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_shadows.cpp  tr_sky.cpp  tr_surface.cpp  tr_vbo.cpp  tr_world.cpp
src/engine/renderer2/: tr_animation.cpp  tr_backend.cpp  tr_bsp.cpp  tr_common.h  tr_curve.cpp  tr_fbo.cpp  tr_flares.cpp  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_mesh.cpp  tr_model.cpp  tr_model_iqm.cpp  tr_postprocess.cpp  tr_scene.cpp  tr_shade.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_shadows.cpp  tr_sky.cpp  tr_surface.cpp  tr_vbo.cpp  tr_world.cpp
src/engine/renderercommon/: tr_font.cpp  tr_image_bmp.cpp  tr_image_pcx.cpp  tr_image_png.cpp  tr_image_tga.cpp  tr_public.h
src/engine/renderervk/: tr_animation.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cmds.cpp  tr_common.h  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_mesh.cpp  tr_model.cpp  tr_model_iqm.cpp  tr_scene.cpp  tr_shade.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_sky.cpp  tr_surface.cpp  tr_world.cpp  vk.cpp  vk_flares.cpp  vk_vbo.cpp
src/engine/renderervk/shaders/: compile.bat
src/engine/sdl/: sdl_glimp.cpp  sdl_input.cpp  sdl_snd.cpp
src/engine/server/: sv_ccmds.cpp  sv_client.cpp  sv_filter.cpp  sv_game.cpp  sv_init.cpp  sv_main.cpp
src/engine/unix/: unix_main.cpp  unix_shared.cpp
src/engine/win32/: win_gamma.cpp  win_glimp.cpp  win_input.cpp  win_main.cpp  win_qgl.cpp  win_qvk.cpp  win_snd.cpp  win_wndproc.cpp
src/game/: README.md  meson.build
src/game/cgame/: cg_draw.cpp  cg_event.cpp  cg_local.h  cg_main.cpp  cg_marks.cpp  cg_players.cpp  cg_predict.cpp  cg_servercmds.cpp  cg_syscalls.cpp  cg_weapons.cpp
src/game/game/: bg_lib.c  g_bot.cpp  g_cmds.cpp  g_combat.cpp  g_main.cpp  g_mem.cpp  g_misc.cpp  g_mover.cpp  g_spawn.cpp  g_team.cpp  g_utils.cpp  q_shared.h
src/game/q3_ui/: ui_controls2.c  ui_controls2.cpp  ui_demo2.cpp  ui_gameinfo.cpp  ui_ingame.cpp  ui_main.cpp  ui_playermodel.cpp  ui_qmenu.cpp  ui_removebots.cpp  ui_syscalls.cpp  ui_team.cpp
src/game/ui/: ui_shared.cpp
subprojects/libcurl/: meson.build
subprojects/libjpeg/: meson.build
subprojects/ogg/: meson.build
subprojects/sdl2/: meson.build
subprojects/sdl3/: meson.build
subprojects/sdl3-upstream/wayland-protocols/: wayland.xml
subprojects/vorbis/: meson.build
toolchains/: windows-clangcl.ini
